// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests should render the UI snapshot correctly 1`] = `
<div
  className="css-pgu20y"
>
  <div
    className="textBox css-0"
  >
    <h3
      aria-describedby="test-id-1-location"
      className="chakra-heading css-0"
    >
      <a
        className="css-0"
        href="https://www.nypl.org/"
        onClick={[Function]}
      >
        Test
      </a>
    </h3>
    <div
      className="details css-0"
    />
  </div>
  <div
    className="css-ys3583"
  >
    <a
      aria-label="Test-image"
      className="css-0"
      href="https://www.nypl.org/"
      onClick={[Function]}
      tabIndex={-1}
    >
      <div
        className="scout-nextjs-image"
      >
        <span
          style={
            Object {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "opacity": 1,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "initial",
            }
          }
        >
          <span
            style={
              Object {
                "background": "none",
                "border": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": "initial",
                "margin": 0,
                "opacity": 1,
                "padding": 0,
                "paddingTop": "50%",
                "width": "initial",
              }
            }
          />
          <img
            alt="image-1-alt-text"
            data-nimg="responsive"
            decoding="async"
            id="nextjsImage-test-id-1"
            onError={[Function]}
            onLoad={[Function]}
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style={
              Object {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": undefined,
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
          <noscript>
            <img
              alt="image-1-alt-text"
              data-nimg="responsive"
              decoding="async"
              id="nextjsImage-test-id-1"
              loading="lazy"
              sizes="100vw"
              src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
              srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
              style={
                Object {
                  "border": "none",
                  "bottom": 0,
                  "boxSizing": "border-box",
                  "display": "block",
                  "height": 0,
                  "left": 0,
                  "margin": "auto",
                  "maxHeight": "100%",
                  "maxWidth": "100%",
                  "minHeight": "100%",
                  "minWidth": "100%",
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "padding": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </noscript>
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`CardGrid tests should render the UI snapshot correctly 1`] = `
<div
  className="css-15j2i3p"
>
  <div
    className="css-1ngwrio"
  >
    <div
      className="css-1m8gjtz"
    >
      <div
        className="css-y9cf5o"
      >
        <h2
          className="chakra-heading css-18pkilg"
        >
          <a
            className="css-0"
            href="https://nypl.com"
            id="card-grid-test-id-heading"
            onClick={[Function]}
          >
            Test title
          </a>
        </h2>
      </div>
    </div>
    <div
      className="css-1y2jlch"
    >
      <ul
        className="css-lgj0h8"
      >
        <li
          className="css-155za0w"
          id="test-id-1"
        >
          <div
            className="css-pgu20y"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-1-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      id="nextjsImage-test-id-1"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-1-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        id="nextjsImage-test-id-1"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
        <li
          className="css-155za0w"
          id="test-id-2"
        >
          <div
            className="css-pgu20y"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-2-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      id="nextjsImage-test-id-2"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-2-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        id="nextjsImage-test-id-2"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
        <li
          className="css-155za0w"
          id="test-id-3"
        >
          <div
            className="css-pgu20y"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-3-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      id="nextjsImage-test-id-3"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-3-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        id="nextjsImage-test-id-3"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
        <li
          className="css-155za0w"
          id="test-id-4"
        >
          <div
            className="css-pgu20y"
          >
            <div
              className="textBox css-0"
            >
              <h3
                className="chakra-heading css-0"
              >
                <a
                  className="css-0"
                  href="https://www.nypl.org/"
                  onClick={[Function]}
                >
                  Test
                </a>
              </h3>
              <div
                className="details css-0"
              />
            </div>
            <div
              className="css-ys3583"
            >
              <a
                aria-label="Test-image"
                className="css-0"
                href="https://www.nypl.org/"
                onClick={[Function]}
                tabIndex={-1}
              >
                <div
                  className="scout-nextjs-image"
                >
                  <span
                    style={
                      Object {
                        "background": "none",
                        "border": 0,
                        "boxSizing": "border-box",
                        "display": "block",
                        "height": "initial",
                        "margin": 0,
                        "opacity": 1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "relative",
                        "width": "initial",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "background": "none",
                          "border": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": "initial",
                          "margin": 0,
                          "opacity": 1,
                          "padding": 0,
                          "paddingTop": "50%",
                          "width": "initial",
                        }
                      }
                    />
                    <img
                      alt="image-4-alt-text"
                      data-nimg="responsive"
                      decoding="async"
                      id="nextjsImage-test-id-4"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style={
                        Object {
                          "border": "none",
                          "bottom": 0,
                          "boxSizing": "border-box",
                          "display": "block",
                          "height": 0,
                          "left": 0,
                          "margin": "auto",
                          "maxHeight": "100%",
                          "maxWidth": "100%",
                          "minHeight": "100%",
                          "minWidth": "100%",
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "padding": 0,
                          "position": "absolute",
                          "right": 0,
                          "top": 0,
                          "width": 0,
                        }
                      }
                    />
                    <noscript>
                      <img
                        alt="image-4-alt-text"
                        data-nimg="responsive"
                        decoding="async"
                        id="nextjsImage-test-id-4"
                        loading="lazy"
                        sizes="100vw"
                        src="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90"
                        srcSet="/_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=640&q=90 640w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=750&q=90 750w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=828&q=90 828w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1080&q=90 1080w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1200&q=90 1200w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=1920&q=90 1920w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=2048&q=90 2048w, /_next/image?url=https%3A%2F%2Fplaceimg.com%2F400%2F200%2Farch&w=3840&q=90 3840w"
                        style={
                          Object {
                            "border": "none",
                            "bottom": 0,
                            "boxSizing": "border-box",
                            "display": "block",
                            "height": 0,
                            "left": 0,
                            "margin": "auto",
                            "maxHeight": "100%",
                            "maxWidth": "100%",
                            "minHeight": "100%",
                            "minWidth": "100%",
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "padding": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          }
                        }
                      />
                    </noscript>
                  </span>
                </div>
              </a>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="css-1ktje31"
    >
      <div
        className="css-9cvqd6"
      />
    </div>
  </div>
</div>
`;
